- Fixed AppDomain security. - Fixed all code analysis warnings.

--- a/Source/Qactive.Expressions/Qactive.Expressions.csproj
+++ b/Source/Qactive.Expressions/Qactive.Expressions.csproj
@@ -142,6 +142,7 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializableBinaryExpression.cs" />
     <Compile Include="SerializableBlockExpression.cs" />
