Begun decoupling TCP from transport.

--- a/Source/Qactive/Qactive.csproj
+++ b/Source/Qactive/Qactive.csproj
@@ -171,6 +171,7 @@
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
     <Compile Include="AsyncConsumerQueue.cs" />
+    <Compile Include="TcpClientQbservableProvider.cs" />
     <Compile Include="Either.cs" />
     <Compile Include="Either{TLeft,TRight}.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -178,7 +179,7 @@
     <Compile Include="KnownTypeContext.cs" />
     <Compile Include="ExceptionDispatchInfoEqualityComparer.cs" />
     <Compile Include="ExpressionOptions.cs" />
-    <Compile Include="QbservableTcpServer - Secure.cs" />
+    <Compile Include="TcpQbservableServer - Secure.cs" />
     <Compile Include="DefaultServerDuplexQbservableProtocolSink.cs" />
     <Compile Include="DuplexCallbackId.cs" />
     <Compile Include="ExpressionSecurityException.cs" />
@@ -216,7 +217,7 @@
     <Compile Include="QbservableProtocolShutdownReason.cs" />
     <Compile Include="QbservableSourcePlaceholder.cs" />
     <Compile Include="QbservableSubscriptionException.cs" />
-    <Compile Include="QbservableTcpServer.cs" />
+    <Compile Include="TcpQbservableServer.cs" />
     <Compile Include="QbservableTcpClient.cs" />
     <Compile Include="DuplexCallbackEnumerable.cs" />
     <Compile Include="DuplexCallbackObservable.cs" />
@@ -225,11 +226,11 @@
     <Compile Include="SecurityExpressionVisitor.cs" />
     <Compile Include="QbservableServiceConverter.cs" />
     <Compile Include="ServiceEvaluationContext.cs" />
-    <Compile Include="TcpClientTermination.cs" />
-    <Compile Include="TcpClientQbservableProvider.cs" />
-    <Compile Include="TcpClientQuery.cs" />
-    <Compile Include="TcpServerQbservableProvider.cs" />
-    <Compile Include="TcpServerQuery.cs" />
+    <Compile Include="ClientTermination.cs" />
+    <Compile Include="ClientQbservableProvider.cs" />
+    <Compile Include="ClientQuery.cs" />
+    <Compile Include="ServerQbservableProvider.cs" />
+    <Compile Include="ServerQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
