Added TCP overloads allowing callers to prepare client and server-side sockets; e.g., for disabling the Nagel algorithm or enabling keep-alives via SetSocketOptions.

--- a/Source/Qactive.Providers.Tcp/Qactive.Providers.Tcp.csproj
+++ b/Source/Qactive.Providers.Tcp/Qactive.Providers.Tcp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="Nop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TcpQactiveDefaults.cs" />
     <Compile Include="TcpQactiveProviderFactory.cs" />
