--- a/Source/Qactive/Qactive.csproj
+++ b/Source/Qactive/Qactive.csproj
@@ -181,8 +181,10 @@
     <Compile Include="KnownTypeContext.cs" />
     <Compile Include="ExceptionDispatchInfoEqualityComparer.cs" />
     <Compile Include="ExpressionOptions.cs" />
+    <Compile Include="Log - Expressions.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="QactiveProviderFactory.cs" />
+    <Compile Include="QactiveTraceSources.cs" />
     <Compile Include="QbservableServer.cs" />
     <Compile Include="QbservableServer - Secure.cs" />
     <Compile Include="DefaultServerDuplexQbservableProtocolSink.cs" />
@@ -191,6 +193,7 @@
     <Compile Include="IServerDuplexQbservableProtocolSink.cs" />
     <Compile Include="Extensions\Observable3.cs" />
     <Compile Include="RxSecureQbservable.cs" />
+    <Compile Include="SemanticTrace.cs" />
     <Compile Include="ServerDuplexQbservableProtocolSink.cs" />
     <Compile Include="DuplexQbservableMessage.cs" />
     <Compile Include="IClientDuplexQbservableProtocolSink.cs" />
