--- a/Source/QbservableServer/app.config
+++ b/Source/QbservableServer/app.config
@@ -1,23 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-	</startup>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<probing privatePath="bin;"/>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Reactive.Interfaces" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Reactive.Core" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Reactive.Linq" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+  <system.diagnostics>
+    <trace autoflush="true" />
+
+    <sharedListeners>
+      <add name="LogFile" initializeData="Server.log" traceOutputOptions="ThreadId,DateTime" type="System.Diagnostics.DelimitedListTraceListener" delimiter=": " />
+    </sharedListeners>
+
+    <switches>
+      <!-- Off, Error, Warning, Information, Verbose -->
+      <add name="Qactive" value="Verbose" />
+      <add name="Network" value="Warning" />
+    </switches>
+
+    <sources>
+      <!-- Qactive -->
+      <source name="Qactive" switchName="Qactive">
+        <listeners>
+          <add name="LogFile" />
+        </listeners>
+      </source>
+      <source name="Qactive.Expressions" switchName="Qactive">
+        <listeners>
+          <add name="LogFile" />
+        </listeners>
+      </source>
+
+      <!-- System.Net -->
+      <source name="System.Net" tracemode="includehex" maxdatasize="1024" switchName="Network">
+        <listeners>
+          <add name="LogFile" />
+        </listeners>
+      </source>
+      <source name="System.Net.Sockets" switchName="Network">
+        <listeners>
+          <add name="LogFile" />
+        </listeners>
+      </source>
+      <source name="System.Net.Cache" switchName="Network">
+        <listeners>
+          <add name="LogFile" />
+        </listeners>
+      </source>
+    </sources>
+
+  </system.diagnostics>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
+
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="bin;"/>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Interfaces" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Core" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Linq" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
