--- a/Testing/Qactive.Tests/packages.config
+++ b/Testing/Qactive.Tests/packages.config
@@ -6,4 +6,5 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="net461" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Providers" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-Testing" version="2.2.5" targetFramework="net461" />
 </packages>
