--- a/Source/Qactive/Qactive.csproj
+++ b/Source/Qactive/Qactive.csproj
@@ -171,12 +171,12 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
-    <Compile Include="AsyncConsumerQueue.cs" />
     <Compile Include="IQactiveProvider.cs" />
     <Compile Include="Either.cs" />
     <Compile Include="Either{TLeft,TRight}.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IParameterizedQbservableProvider.cs" />
+    <Compile Include="IQbservableProtocol.cs" />
     <Compile Include="ISecureQbservable.cs" />
     <Compile Include="KnownTypeContext.cs" />
     <Compile Include="ExceptionDispatchInfoEqualityComparer.cs" />
@@ -185,9 +185,9 @@
     <Compile Include="Log.cs" />
     <Compile Include="QactiveProviderFactory.cs" />
     <Compile Include="QactiveTraceSources.cs" />
+    <Compile Include="QbservableProtocol.cs" />
     <Compile Include="QbservableServer.cs" />
     <Compile Include="QbservableServer - Secure.cs" />
-    <Compile Include="DefaultServerDuplexQbservableProtocolSink.cs" />
     <Compile Include="DuplexCallbackId.cs" />
     <Compile Include="ExpressionSecurityException.cs" />
     <Compile Include="IServerDuplexQbservableProtocolSink.cs" />
@@ -195,14 +195,10 @@
     <Compile Include="RxSecureQbservable.cs" />
     <Compile Include="SemanticTrace.cs" />
     <Compile Include="ServerDuplexQbservableProtocolSink.cs" />
-    <Compile Include="DuplexQbservableMessage.cs" />
     <Compile Include="IClientDuplexQbservableProtocolSink.cs" />
-    <Compile Include="DefaultClientDuplexQbservableProtocolSink.cs" />
     <Compile Include="IProtocolMessage.cs" />
     <Compile Include="QbservableProtocolSink{TMessage}.cs" />
-    <Compile Include="QbservableMessage.cs" />
-    <Compile Include="QbservableProtocol{TMessage}.cs" />
-    <Compile Include="DefaultQbservableProtocol.cs" />
+    <Compile Include="QbservableProtocol{TSource,TMessage}.cs" />
     <Compile Include="DuplexCallback.cs" />
     <Compile Include="DuplexLocalEvaluator.cs" />
     <Compile Include="ClientDuplexQbservableProtocolSink.cs" />
@@ -219,7 +215,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Qbservable2.cs" />
     <Compile Include="QbservableBase.cs" />
-    <Compile Include="QbservableProtocol.cs" />
+    <Compile Include="QbservableProtocol{TSource}.cs" />
     <Compile Include="QbservableServiceOptions.cs" />
     <Compile Include="QbservableProtocolMessageKind.cs" />
     <Compile Include="QbservableProtocolShutdownReason.cs" />
