--- a/Source/Qactive/Qactive.csproj
+++ b/Source/Qactive/Qactive.csproj
@@ -171,6 +171,7 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="IDuplexProtocolMessage.cs" />
     <Compile Include="IQactiveProvider.cs" />
     <Compile Include="Either.cs" />
     <Compile Include="Either{TLeft,TRight}.cs" />
@@ -183,6 +184,7 @@
     <Compile Include="ExpressionOptions.cs" />
     <Compile Include="Log - Expressions.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="NotificationKindExtensions.cs" />
     <Compile Include="QactiveProviderFactory.cs" />
     <Compile Include="QactiveTraceSources.cs" />
     <Compile Include="QbservableProtocol.cs" />
