Defined simple tests for the Join operator. (passing)

--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="DuplexStream.cs" />
     <Compile Include="DuplexSubject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\JoinTests.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestDuplexMessage.cs" />
     <Compile Include="TestMessage.cs" />
