--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -83,7 +83,10 @@
     <Compile Include="DuplexStream.cs" />
     <Compile Include="DuplexSubject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\GroupJoinTests.cs" />
     <Compile Include="Queries\JoinTests.cs" />
+    <Compile Include="Queries\SelectTests.cs" />
+    <Compile Include="Queries\WhereTests.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestDuplexMessage.cs" />
     <Compile Include="TestMessage.cs" />
