--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="CoreTests.cs" />
     <Compile Include="DuplexStream.cs" />
     <Compile Include="DuplexSubject.cs" />
+    <Compile Include="Extensions\ObservableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GroupJoinTests.cs" />
     <Compile Include="Queries\JoinTests.cs" />
