--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GroupJoinTests.cs" />
     <Compile Include="Queries\JoinTests.cs" />
+    <Compile Include="Queries\NestedQueryTests.cs" />
     <Compile Include="Queries\SelectTests.cs" />
     <Compile Include="Queries\WhereTests.cs" />
     <Compile Include="TestBase.cs" />
