Removed the EndPoint dependency from the core's ClientTermination class and moved it into the TCP library.

--- a/Source/Qactive.Providers.Tcp/Qactive.Providers.Tcp.csproj
+++ b/Source/Qactive.Providers.Tcp/Qactive.Providers.Tcp.csproj
@@ -162,6 +162,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Nop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpClientTermination.cs" />
     <Compile Include="TcpQactiveDefaults.cs" />
     <Compile Include="TcpQactiveProviderFactory.cs" />
     <Compile Include="TcpQactiveProviderFactory{TTransportInitializer}.cs" />
