Added WhiteTie ref to flavor project and moved it under a Flavors solution folder.

--- a/Source/Qactive-Net45/packages.config
+++ b/Source/Qactive-Net45/packages.config
@@ -6,4 +6,5 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Rx-Providers" version="2.2.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="WhiteTie" version="1.3.14" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
 </packages>
